update z-index of bookings divs to avoid containers blocking clickability when overlapping.

--- a/src/pages/Bookings/Bookings.css
+++ b/src/pages/Bookings/Bookings.css
@@ -60,7 +60,10 @@
   background-color: white;
   border-radius: 20px;
   border: 2px solid #2E9D29;
+  position: relative;
+  z-index: 5;
 }
+
 
 #upcoming-show>h1 {
   margin: 0;
